[gd_scene load_steps=11 format=3 uid="uid://svepvwedlwv0"]

[ext_resource type="Script" path="res://components/motion/2D/rotation/card_roulette/spin_card_roulette.gd" id="1_ynaj7"]
[ext_resource type="PackedScene" uid="uid://c76rjb46vwy5x" path="res://components/motion/2D/rotation/card_roulette/spin_card.tscn" id="2_a4l4b"]
[ext_resource type="Script" path="res://components/motion/2D/rotation/orbit_component_2d.gd" id="3_6l77p"]
[ext_resource type="Script" path="res://components/motion/2D/rotation/card_roulette/cards/spin_card_resource.gd" id="3_g1bsj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mhee"]
size = Vector2(3, 21)

[sub_resource type="Resource" id="Resource_n2deg"]
script = ExtResource("3_g1bsj")
amount_of_ticks = 0
elemental_type = 9
range = 0
base_damage = 0.0
base_elemental_damage = 0.0
target_groups = Array[StringName]([])

[sub_resource type="Resource" id="Resource_n68nl"]
script = ExtResource("3_g1bsj")
amount_of_ticks = 0
elemental_type = 9
range = 0
base_damage = 0.0
base_elemental_damage = 0.0
target_groups = Array[StringName]([])

[sub_resource type="Resource" id="Resource_j6vbr"]
script = ExtResource("3_g1bsj")
amount_of_ticks = 0
elemental_type = 9
range = 0
base_damage = 0.0
base_elemental_damage = 0.0
target_groups = Array[StringName]([])

[sub_resource type="Resource" id="Resource_gefa0"]
script = ExtResource("3_g1bsj")
amount_of_ticks = 0
elemental_type = 9
range = 0
base_damage = 0.0
base_elemental_damage = 0.0
target_groups = Array[StringName]([])

[sub_resource type="Resource" id="Resource_qvxdr"]
script = ExtResource("3_g1bsj")
amount_of_ticks = 0
elemental_type = 9
range = 0
base_damage = 0.0
base_elemental_damage = 0.0
target_groups = Array[StringName]([])

[node name="SpinCardRoulette" type="Node2D"]
script = ExtResource("1_ynaj7")
orbit_radius = 45.0
angular_velocity = 1.2

[node name="OrbitPoint" type="Marker2D" parent="."]

[node name="SpinCardDetector" type="Area2D" parent="OrbitPoint"]
collision_layer = 0
collision_mask = 256
monitorable = false
priority = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrbitPoint/SpinCardDetector"]
position = Vector2(-0.5, -3.5)
shape = SubResource("RectangleShape2D_0mhee")
debug_color = Color(0.964706, 0.576471, 0.701961, 0.419608)

[node name="SpinCard" parent="." instance=ExtResource("2_a4l4b")]
data = SubResource("Resource_n2deg")

[node name="OrbitComponent2D" type="Node" parent="SpinCard" node_paths=PackedStringArray("orbit_around", "target")]
script = ExtResource("3_6l77p")
orbit_around = NodePath("../../OrbitPoint")
target = NodePath("..")

[node name="SpinCard2" parent="." instance=ExtResource("2_a4l4b")]
data = SubResource("Resource_n68nl")

[node name="OrbitComponent2D" type="Node" parent="SpinCard2" node_paths=PackedStringArray("orbit_around", "target")]
script = ExtResource("3_6l77p")
orbit_around = NodePath("../../OrbitPoint")
target = NodePath("..")

[node name="SpinCard3" parent="." instance=ExtResource("2_a4l4b")]
data = SubResource("Resource_j6vbr")

[node name="OrbitComponent2D" type="Node" parent="SpinCard3" node_paths=PackedStringArray("orbit_around", "target")]
script = ExtResource("3_6l77p")
orbit_around = NodePath("../../OrbitPoint")
target = NodePath("..")

[node name="SpinCard4" parent="." instance=ExtResource("2_a4l4b")]
data = SubResource("Resource_gefa0")

[node name="OrbitComponent2D" type="Node" parent="SpinCard4" node_paths=PackedStringArray("orbit_around", "target")]
script = ExtResource("3_6l77p")
orbit_around = NodePath("../../OrbitPoint")
target = NodePath("..")

[node name="SpinCard5" parent="." instance=ExtResource("2_a4l4b")]
data = SubResource("Resource_qvxdr")

[node name="OrbitComponent2D" type="Node" parent="SpinCard5" node_paths=PackedStringArray("orbit_around", "target")]
script = ExtResource("3_6l77p")
orbit_around = NodePath("../../OrbitPoint")
target = NodePath("..")
